--- a/config.yaml
+++ b/config.yaml
@@ -2,6 +2,9 @@ app:
   name: "web_app"
   mode: "dev"
   port: 8081
+  version: "v0.0.1"
+  start_time: "2020-07-01"
+  machine_id: 1
 
 log:
   level: "debug"
@@ -11,11 +14,11 @@ log:
   max_backups: 7
 
 mysql:
-  host: "127.0.0.1"
-  port: 13306
+  host: "192.168.1.245"
+  port: 3306
   user: "root"
-  password: "root1234"
-  dbname: "sql_demo"
+  password: ""
+  dbname: "bluebell"
   max_cons: 200
   max_idle_conns: 50
 
